Docs for creating of project
