# docs/swagger.yml
@@ -127,7 +127,47 @@ paths:
         500:
           description: "Internal server error"
 
+  /core/account/projects:
+    post:
+      tags:
+        - "projects"
+      summary: "Create a project"
+      description: ""
+      produces:
+        - "application/json"
+      consumes:
+        - "application/json"
+      parameters:
+        - name: "CoreAccountCreateProjectRequestBody"
+          in: "body"
+          description: "Body of request for register new user"
+          required: true
+          schema:
+            $ref: "#/definitions/CoreAccountCreateProjectRequestModel"
+      responses:
+        200:
+          description: "Successful operation"
+        401:
+          description: "Unauthorized"
+        422:
+          description: "Validation error"
+        500:
+          description: "Internal server error"
+
 definitions:
+
+  CoreAccountCreateProjectRequestModel:
+    type: "object"
+    required:
+      - "name"
+      - "format_id"
+    properties:
+      name:
+        type: "string"
+      description:
+        type: "string"
+      format_id:
+        type: "integer"
 
   CoreDefaultHandbookModel:
     type: "object"
